<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">SpaceInvaders</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Main menu -->
    <string name="main_menu_heading">Space Invaders</string>
    <string name="main_menu_text">Defend yourself or be doomed!!!</string>
    <string name="about_buttontext">About Game</string>
    <string name="high_score_buttontext">High Score</string>
    <string name="play_game_buttontext">Play Space Invaders</string>
    
    <!-- About -->
    <string name="title_activity_about_game">AboutGame</string>
    <string name="about_game_header">About Space Invaders</string>
    <string name="about_game_content">Bla-bla-bla space invaders.</string>
    
    <!-- High score -->
    <string name="title_activity_high_score">HighScore</string>
    <string name="high_score_header">Space Invaders Hall of Fame</string>
    <string name="high_score_content">Bla-bla-bla space invaders.</string>
    
    <!-- Register High Score -->
    <string name="title_activity_register_highscore">New High Score</string>
    <string name="register_score_firstNameLabel">First name:</string>
    <string name="register_score_lastNameLabel">Last name:</string>
    <string name="register_score_scoreLabel">Score:</string>
    <string name="register_ok_backToGameButtonText">Play Again</string>
    <string name="register_ok_toHighScoreButtonText">High Scores</string>
    <string name="register_cancel_button">Cancel</string>
    <string name="recister_cancel_dialog_text">Are you sure you don\'t want to register the High Score?</string>
    
    
    <!-- Settings -->
    <string name="action_settings_label">Settings</string>
    <string name="prefs_networkingCategory">Network</string>
    <string name="prefs_networkingTitle">Synchronize external HighScore</string>
    <string name="prefs_networkinsSummaryOn">Sync allowed</string>
    <string name="prefs_networkinsSummaryOff">Sync not allowed</string>
    <string name="prefs_soundCategory">Audio</string>
    <string name="prefs_soundTitle">Sound on startup</string>
    <string name="prefs_soundSummaryOn">Sound on</string>
    <string name="prefs_soundSummaryOff">Sound off</string>
    <string name="prefs_switchTextOn">ON</string>
    <string name="prefs_switchTextOff">OFF</string>

</resources>
