<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deep_space"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashActivity" >

    <TextView
        android:id="@+id/highscore_listItemNameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_menu_heading"
        android:textColor="@color/header_color"
        android:textSize="@dimen/activity_menu_header" />

    <Button
        android:id="@+id/high_score_button"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_button"
        android:layout_alignRight="@+id/about_button"
        android:layout_below="@+id/about_button"
        android:layout_marginTop="120dp"
        android:background="@drawable/menu_button_gray"
        android:onClick="onHighScoreClicked"
        android:text="@string/high_score_buttontext" />

    <Button
        android:id="@+id/play_game_button"
        style="@style/button_text"
        android:background="@drawable/menu_button_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/high_score_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:onClick="onPlayGameClicked"
        android:text="@string/play_game_buttontext" />

    <Button
        android:id="@+id/about_button"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play_game_button"
        android:layout_alignRight="@+id/play_game_button"
        android:layout_below="@+id/highscore_listItemName"
        android:layout_marginTop="23dp"
        android:background="@drawable/menu_button"
        android:onClick="onAboutGameClicked"
        android:text="@string/about_buttontext" />

    <Button
        android:id="@+id/button1"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_button"
        android:layout_alignRight="@+id/high_score_button"
        android:layout_below="@+id/play_game_button"
        android:layout_marginTop="18dp"
        android:background="@drawable/menu_button_yellow"
        android:onClick="onRegisterHighScoreClicked"
        android:text="Button" />

    <TextView
        android:id="@+id/highscore_listItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscore_listItemNameLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/main_menu_text"
        android:textColor="@color/header_color" />

</RelativeLayout>